Add newest version link

--- a/index.html
+++ b/index.html
@@ -407,6 +407,9 @@ pre .chunk {
   </script>
 </head>
 <body>
+  <div id="note">
+    Hi, thanks for watching my slide, but this is old version, click <a href="https://denny.one/git-slide/">here</a> to visit the newest version.
+  </div>
     <div class="progress">
     <div class="progress-bar"></div>
   </div>
